styles/main.css
*, *:before, *:after {
  box-sizing: border-box;
}

html {
  font-size: 10px;
  scroll-behavior: smooth;
}

body {
  background-color: #efefef;
  color: #141414;
  height: 100%;
  margin: 0 auto;
  position: relative;
  width: 100%;
}

.container {
  max-width: 400px;
  position: relative;
}


/* Colors: #EFEFEF (cultured) (rgba(239, 239, 239, 0.6)) #FFFCC0 (buttercream) (rgba(255, 252, 192, 0.6)) #141414 (Jet)(rgba(20, 20, 20, .25))  */

/** Typography **/

h1 {
  font-family: 'Montserrat Alternates', sans-serif;
  font-size: 3.6rem;
  line-height: 5.2rem;
}

h2 {
  font-family: 'Montserrat Alternates', sans-serif;
  font-size: 3.2rem;
  line-height: 4.8rem;
}

h3 {
  font-family: 'Montserrat Alternates', sans-serif;
  font-size: 1.6rem;
  line-height: 2.4rem;
}

h4 {
  font-family: 'Raleway', sans-serif;
  font-size: 2.8rem;
  font-weight: 700; /* bold */
  line-height: 4.2rem;
}

h5 {
  font-family: 'Raleway', sans-serif;
  font-size: 1.8rem;
  font-weight: 700; /* bold */
  line-height: 2.7rem; /* 27px */
}

h6 {
  font-family: 'Raleway', sans-serif;
  font-size: 1.8rem;
  font-weight: 400; /* regular */
  line-height: 2.7rem;
}

p {
  font-family: 'Open Sans', sans-serif;
  font-size: 1.6rem; /* 16px */
  font-weight: 400;
  line-height: 2.4rem; /* 24px */
}

.small {
  font-size: 1.6rem;
  line-height: 2.4rem;
}

.text-box {
  margin: 0 auto;
  max-width: 640px;
  padding: 0 2rem;
}

/** navigation **/

nav {
  color: #EFEFEF;
  height: 7rem;
  overflow: visible;
  position: relative;
  z-index: 4;
}

.nav-contents {
  align-items: center;
  background-color: #141414;
  border-bottom: 2px solid #FFFCC0;
  display: flex;
  flex-direction: row;
  height: 7rem;
  max-width: 400px;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 4;
}

#myLogo {
  color: #EFEFEF;
  display: flex;
  padding: 0 8%;
  text-decoration: none;
}

#myLogo:hover {
  text-shadow: 0 0 20px #EFEFEF;
}

#myLinks {
  background-color: #141414;
  border-bottom: 2px solid #FFFCC0;
  display: none;
  margin-top: 7rem;
  padding: 12px 6%;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
}

.nav-text a {
  color: #FFFCC0;
  display: block;
  padding: 1.6rem 1.4rem;
  text-align: right;
  text-decoration: none;
}

.nav-text a:hover {
  text-shadow: 0 0 10px #FFFCC0;
}

.burger {
  color: #FFFCC0;
  cursor: pointer;
  position: absolute;
  right: 8%;
}

.burger:hover {
  text-shadow: 0 0 30px #FFFCC0;
}

.active {
  background-color: #FFFCC0;
}

.currentlink a{
  padding: 0;
  margin: 1.6rem 1.4rem;
  color: #EFEFEF;
}

.currentlink a:hover {
  text-shadow: 0 0 0 #EFEFEF;
}

/** Buttons **/

.btn {
  align-items: center;
  border-radius: 3px;
  color: inherit;
  display: flex;
  height: 4.8rem;
  justify-content: center;
  text-decoration: none;
  width: 16.8rem;
}

.CONTACT a {
  align-items: center;
  border: 1px solid #EFEFEF;
  border-radius: 3px;
  color: #EFEFEF;
  display: flex;
  justify-content: center;
  margin: 2rem 0;
  padding: .7rem 2rem;
  text-decoration: none;
  width: max-content;
}

.CONTACT a:hover {
  background-color: #FFFCC0;
  color: #141414;
}

.content-btn {
  border: 1px solid #141414;
  border-radius: 3px;
  color: #141414;
  display: block;
  margin: 2rem 0 1rem 0;
  padding: 1rem 1.2rem;
  text-decoration: none;
  width: max-content;
}

.content-btn:hover {
  background-color: #141414;
  color: #EFEFEF;
}

/** header **/

header {
  position: relative;
}

/** footer **/

footer {
  padding-top: 5rem; /* 50px */
  text-align: center;
  background-color: #141414;
  color: #EFEFEF;
}

#footer-contact {
  display: inline-flex;
}

.social-media-links {
  display: flex;
  justify-content: center;
}

.social-media-links li {
  margin: 0 10px 50px 10px;
}

.social-media-links li:hover {
  text-shadow: 0 0 10px #EFEFEF;
}

.fa {
  color: #EFEFEF;
  font-size: 2rem; /** 20px **/
}

.light-footer {
  background-color: #EFEFEF;
  color: #141414;
}

.light-footer .fa {
  color: #141414;
}

.light-footer > .social-media-links li:hover {
  text-shadow: 0 0 16px rgba(20, 20, 20, .25);
}

.light-footer > .CONTACT a {
  border: 1px solid #141414;
  color: #141414;
}

.light-footer > .CONTACT a:hover {
  background-color: #141414;
  color: #EFEFEF;
}

/** SECTION & PARAGRAPH **/

section {
  position: relative;
}

.light-section {
  background-color: #EFEFEF;
  color: #141414;
}

.dark-section {
  background-color: #141414;
  color: #EFEFEF;
}

.section-paragraph {
  margin: 0 auto;
  padding-bottom: 3rem;
}

.paragraph-title {
  margin-bottom: 5px;
}

/** SECTION titles **/

.title-box {
  margin-top: 10rem;
  position: relative;
}

.title {
  position: absolute;
  top: -3.5rem;
}


/** SPACE MODIFIERS **/

.title-spacing {
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.text-space {
  margin-top: 10px;
}

.less-space {
  padding-bottom: 5px;
}

.text-deco {
  color: #FFFCC0;
}

.sticky-destination {
  position: relative;
  top: -10rem;
}

#work {
  position: relative;
  top: -8rem;
}

.section-spacing {
  margin: 10rem auto;
}


/******* HOMEPAGE CSS *******/

/** INTRODUCTION **/

.home-header {
  display: flex;
  align-items: center;
  min-height: 60vh;
  margin: 0 auto;
  position: relative;
}

.home-header-container {
  padding: 6rem 2rem;
  max-width: 440px;
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
}

.home-header-text {
  width: 70%;
  z-index: 2;
}

.home-sub-header {
  margin: 3rem 0;
}

.home-header-link {
  display: block;
  text-decoration: none;
  color: #141414;
  margin: 5px 0;
  max-width: 100%;
}

.home-header-link:hover {
  text-decoration: none;
  text-shadow: 0px 0px 4px rgba(20, 20, 20, 0.25);
}

.illustration {
  height: 100%;
  object-fit: cover;
  object-position: left;
  position: absolute;
  right: 0;
  width: 45%;
  z-index: 1;
  padding: 3rem 0;
}

/** PROJECTS **/

.projects-container {
  position: relative;
  max-width: 1600px;
  margin: 0 auto;
  padding: 1rem 0;
}
/* ... */

